--- a/iTEMS/Views/Home/Index.cshtml
+++ b/iTEMS/Views/Home/Index.cshtml
@@ -31,6 +31,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            background-color: #D5FDD5;
         }
 
         .navbar {
@@ -61,9 +62,9 @@
         .slider-container {
             position: relative;
             width: 100%;
-            max-width: 1200px;
+            max-width: 1000px;
             margin: auto;
-            overflow: hidden;
+            overflow: hidden;            
         }
 
         .slides {
@@ -142,16 +143,110 @@
             opacity: 0.8;
         }
 
-        @@media (max-width: 767.98px) {
-            .navbar {
-                text-align: center;
-            }
-            .navbar-collapse {
-                flex-direction: column;
-            }
+        .indent-top {
+            padding-top: 25px;
+        }
+
+        .margin-bot4 {
+            margin bottom: 30px;
+        }
+
+        .grid_9 {
+            display: inline;
+            float: left;
+            position: relative;
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+
+        .margin-bot2 {
+            margin-bottom: 15px;
+        }
+
+        .box-content {
+            background: #f9f9f9;
+            width: 900px;
+            overflow: hidden;
+            border-radius: 11px;
+        }
+
+        .col-6 {
+            width: calc(48% - 10px); /* Adjust width as needed, considering margin */
+            display: inline-block; /* Display inline-block */
+            vertical-align: top; /* Align to the top */
+            margin-right: 20px; /* Adjust margin between columns */
+            margin-bottom: 20px; /* Adjust margin bottom as needed */
+            box-sizing: border-box; /* Ensure padding and border don't add to the width */
+            /* Optionally, you can use float instead of inline-block */
+            /* float: left; */
+        }
+
+        .letterA {
+            width: 50px;
+            height: 50px;
+            background: url(https://innotechlabs.com.my/images/letter1A.png) left top no-repeat;
+            overflow: hidden;
+            font-size: 30px;
+            line-height: 50px;
+            text-align: center;
+            margin: 10px 10px 0 0;
+            float: left;
+            text-transform: uppercase;
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .indent-top2 {
+            padding-top: 10px;
+        }
+
+        .extra-wrap {
+            overflow: hidden;
+        }
+
+        .h5 {
+            font-size: 21px;
+            line-height: 26px;
+            color: #464646;
+            display: block;
+            font-weight: 400;
+            font-family: 'Signika', sans-serif;
+            font-style: normal;
+        }
+
+        .margin-bot3 {
+            margin-bottom: 10px;
+            text-align: justify;
+        }
+
+        .button-2 {
+            display: inline-block;
+            background: url(https://innotechlabs.com.my/images/button-2.png) right 7px no-repeat;
+            padding: 0 18px 0 0;
+            font-size: 18px;
+            line-height: 22px;
+            color: #adcb08;
+            font-weight: 400;
+            font-family: 'Signika', sans-serif;
+        }
+
+        .letterB {
+            width: 50px;
+            height: 50px;
+            background: url(https://innotechlabs.com.my/images/letter2A.png) left top no-repeat;
+            overflow: hidden;
+            font-size: 30px;
+            line-height: 50px;
+            text-align: center;
+            margin: 10px 10px 0 0;
+            float: left;
+            text-transform: uppercase;
+            color: #fff;
+            font-weight: bold;
+        }
 
         .footer {
-            background-color: #f8f9fa;
+            background-color: #CBFDCB;
             padding: 20px 0;
             color: #555;
         }
@@ -174,31 +269,35 @@
             list-style: none;
         }
 
-        /* .link-1 {
-            background: url("https: //innotechlabs.com.my/images/soc_1a.gif") left bottom no-repeat;
-        }
-
-        .link-2 {
-
-        }
-
-        .link-3 {
-            background: url("https://innotechlabs.com.my/images/soc_2a.gif") left bottom no-repeat;
-        }
-        
-        .link-4 {
-        
-        } */
-
         .footer-widget ul {
             width: 50%;
             float: left;
         }
 
+        .footer-widget a {
+            text-decoration: none;
+        }
+
         .info-icons li {
             list-style: none;
-            padding: 0;
-            background: url("https://innotechlabs.com.my/images/ul-2B.png") right 8px no-repeat;
+        }
+
+        .link-1 a, .link-2 a, .link-3 a, .link-4 a {
+            text-decoration: none;
+        }
+
+        .bg-secondary {
+            background-color: #C1FCC1 !important;
+        }
+
+        @@media (max-width: 767.98px) {
+            .navbar {
+                text-align: center;
+            }
+            .navbar-collapse {
+                flex-direction: column;
+            }
+           
             .navbar-nav {
                 width: 100%;
             }
@@ -240,16 +339,16 @@
     <div class="slider-container">
         <div class="slides">
             <div class="slide">
-                <img src="/Assets/Project1.jpeg" width="1200" height="662" alt="Slide 1">
+                <img src="/Assets/Project1.jpeg" width="1000" height="660" alt="Slide 1">
             </div>
             <div class="slide">
-                <img src="/Assets/Project2.jpg" width="1200" height="662" alt="Slide 2">
+                <img src="/Assets/Project2.jpg" width="1000" height="660" alt="Slide 2">
             </div>
             <div class="slide">
-                <img src="/Assets/Project3.jpg" width="1200" height="662" alt="Slide 3">
+                <img src="/Assets/Project3.jpg" width="1000" height="660" alt="Slide 3">
             </div>
             <div class="slide">
-                <img src="/Assets/Project4.jpg" width="1200" height="662" alt="Slide 4">
+                <img src="/Assets/Project4.jpg" width="1000" height="660" alt="Slide 4">
             </div>
             <div class="slide">
                 <img src="/Assets/Project5.jpg" width="1200" height="662" alt="Slide 5">
@@ -267,6 +366,40 @@
         </div>
     </div>
 
+    <!-- First Content -->
+    <div class="container_12 indent-top">
+        <div class="wrapper indent-top1 margin-bot4">
+        <article class="grid_9">
+            <h3 class="margin-bot2">Welcome</h3>
+            <div class="box-content">
+                <div class="wrapper">
+                    <div class="col-6">
+                        <div class="letterA">a</div>
+                        <div class="extra-wrap indent-top2">
+                            <span class="h5">About</span>
+                            <span class="h5 margin-bot3">Innotech Labs</span>
+                            <p class="margin-bot3">Innotech Labs Sdn Bhd was incorporated in 9 November 2000, since then it has been intensively engage in providing quality product of services to a leading corporate giant in the energy industry, TNB, University Kuala Lumpur (MFI & MIAT), Government Sectors and few others education institutes.</p>
+                            <a href="#" class="button-2">Read More</a>
+                        </div>
+                    </div>
+
+                    <div class="col-6">
+                        <div class="letterB">b</div>
+                        <div class="extra-wrap indent-top2">
+                            <span class="h5">About</span>
+                            <span class="h5 margin-bot3">Innotech Products</span>
+                            <p class="margin-bot3">We at Innotech Labs offer a wide range of Printers & Toners that suites your everyday needs. We provide our customers a safe and convenient place to purchase products with no compromise on quality. Browse our product catalog or visit our online store now at 
+                                <a href="http://www.innotech-store.com/" target="new">www.innotech-store.com</a>
+                            </p>
+                            <a href="#" class="button-2">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -274,7 +407,7 @@
                     <div class="footer-about">
                         <div class="about-logo">
                             <a href="/Index"></a>
-                            <img src="~/Assets/Company Logo.png" />
+                            <img src="~/Assets/Company Logo.png" width="350" height="90"/>
                         </div>
 
                         <ul>
@@ -307,13 +440,13 @@
                             <li><a href="#">Our Project</a></li>
                             <li><a href="#">Our Sitemap</a></li>
                             <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Testimonial</a></li>
                         </ul>
                     </div>                 
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <ul class="social-icons">
+                        <h5>Visit Us at</h5>
                         <div class="link-1">
                             <a href="https://facebook.com"><i class="fab fa-facebook"></i>   Facebook</a>
                         </div>
@@ -331,9 +464,12 @@
                         </div>
                     </ul>
                 </div>
-                <div class="col-md-12">
-                    <p>&copy; 2024 Powered by InnotechLabs. All rights reserved.</p>
-                </div>
+
+                <div class="container-fluid px-0 py-3 bg-secondary">
+                    <div class="col-md-12">
+                        <p style="color: black;">&copy; 2024 Powered by InnotechLabs. All rights reserved.</p>
+                    </div>
+                </div>              
             </div>
         </div>
     </footer>
