--- a/iTEMS/Views/Home/Index.cshtml
+++ b/iTEMS/Views/Home/Index.cshtml
@@ -157,6 +157,7 @@
             position: relative;
             margin-left: 5px;
             margin-right: 5px;
+            padding-bottom: 25px;
         }
 
         .margin-bot2 {
@@ -245,15 +246,16 @@
             font-weight: bold;
         }
 
-        .footer {
-            background-color: #CBFDCB;
+        .footer {            
             padding: 20px 0;
             color: #555;
         }
 
             .footer .container {
+                background-color: #CBFDCB;
                 text-align: center;
                 height: 100%;
+                padding: 10px;
             }
 
             .footer a {
@@ -318,7 +320,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="/Assets/Company Logo.png" alt="Logo" width="250" height="50">
+            <img src="/Assets/Company Logo.png" alt="Logo" width="250" height="60">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -400,6 +402,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -412,7 +415,11 @@
 
                         <ul>
                             <li>
-                                Address: Bandar Puchong Jaya, 47100 Puchong, Selangor
+                                Address: Suite 5-17, Staircase 4,
+                                Pusat Perdagangan KLH,
+                                Bandar Puchong Jaya,
+                                47100 Puchong,
+                                Selangor
                             </li>
                             <li>
                                 Phone: +60 16-398 2262
